# http-request-k8s

./: README.md  api_request.py  mock-api.py  pyproject.toml  report.csv
